--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "tasker-components",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -14,14 +16,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -57,6 +55,7 @@
     "eslint-plugin-storybook": "^0.11.3",
     "prop-types": "^15.8.1",
     "storybook": "^8.6.0",
+    "typescript": "^5.7.3",
     "webpack": "^5.98.0"
   }
 }
