--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "tsc",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "npm run build"
   },
   "eslintConfig": {
     "extends": [
