Fix npm ignore, AI is not always intelligent

--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
-#exclude everything
-*
-# except dist and pkg file
-!dist
-!package.json
+node_modules
+src
+package*
+tsconfig.json
+.storybook
+README.md
