Fix npm ignore for node_moduels - 2 some reason it does not work yet

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,9 @@
-/node_modules
-src
-package*
-tsconfig.json
-.storybook
+node_modules
 README.md
+src
+test
+# Exclude everything by default
+*
+# Include only the dist folder and package.json
+!dist
+!package.json
