--- a/package.json
+++ b/package.json
@@ -5,21 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react": "^19.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npx babel src/components --out-dir dist --extensions '.ts,.tsx'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "npm run build"
@@ -43,20 +33,26 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-essentials": "^8.6.0",
-    "@storybook/addon-interactions": "^8.6.0",
-    "@storybook/addon-onboarding": "^8.6.0",
-    "@storybook/blocks": "^8.6.0",
-    "@storybook/preset-create-react-app": "^8.6.0",
-    "@storybook/react": "^8.6.0",
-    "@storybook/react-webpack5": "^8.6.0",
-    "@storybook/test": "^8.6.0",
-    "eslint-plugin-storybook": "^0.11.3",
-    "prop-types": "^15.8.1",
-    "storybook": "^8.6.0",
-    "typescript": "^4.9.5",
-    "webpack": "^5.98.0"
-  }
+"devDependencies": {
+  "@babel/cli": "^7.21.0",
+  "@babel/core": "^7.21.0",
+  "@babel/preset-env": "^7.21.0",
+  "@babel/preset-react": "^7.21.0",
+  "@babel/preset-typescript": "^7.21.0",
+  "@chromatic-com/storybook": "^3.2.4",
+  "@storybook/addon-essentials": "^8.6.0",
+  "@storybook/addon-interactions": "^8.6.0",
+  "@storybook/addon-onboarding": "^8.6.0",
+  "@storybook/blocks": "^8.6.0",
+  "@storybook/preset-create-react-app": "^8.6.0",
+  "@storybook/react": "^8.6.0",
+  "@storybook/react-webpack5": "^8.6.0",
+  "@storybook/test": "^8.6.0",
+  "eslint-plugin-storybook": "^0.11.3",
+  "prop-types": "^15.8.1",
+  "storybook": "^8.6.0",
+  "typescript": "^4.9.5",
+  "webpack": "^5.98.0"
+}
+
 }
