--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
+    "target": "ES6",
+    "module": "ES6",
+    "jsx": "react",
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationDir": "./dist/types",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false,
-    "jsx": "react-jsx",
-    "outDir": "dist",
-    "declaration": true,
-    "noEmitOnError": true,
+    "types": ["react", "node"],
+    "moduleResolution": "node"
   },
   "include": [
-    "src"
+    "src/components"
   ],
   "exclude": ["node_modules", "src/stories/*"]
 }
