--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES6",
     "module": "ES6",
     "jsx": "react",
-    "outDir": "./dist",
+    "outDir": "./dist/components",
     "declaration": true,
     "declarationDir": "./dist/types",
     "esModuleInterop": true,
