--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "types": "dist/types/components/index.d.ts",
   "dependencies": {
     "@types/react": "^19.0.10",
-    "react": "^19.0.0"
+    "@types/react-dom": "^19.0.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.15"
   },
   "scripts": {
     "build": "tsc && npx babel src/components --out-dir dist/components --extensions '.ts,.tsx'",
@@ -33,26 +36,29 @@
       "last 1 safari version"
     ]
   },
-"devDependencies": {
-  "@babel/cli": "^7.21.0",
-  "@babel/core": "^7.21.0",
-  "@babel/preset-env": "^7.21.0",
-  "@babel/preset-react": "^7.21.0",
-  "@babel/preset-typescript": "^7.21.0",
-  "@chromatic-com/storybook": "^3.2.4",
-  "@storybook/addon-essentials": "^8.6.0",
-  "@storybook/addon-interactions": "^8.6.0",
-  "@storybook/addon-onboarding": "^8.6.0",
-  "@storybook/blocks": "^8.6.0",
-  "@storybook/preset-create-react-app": "^8.6.0",
-  "@storybook/react": "^8.6.0",
-  "@storybook/react-webpack5": "^8.6.0",
-  "@storybook/test": "^8.6.0",
-  "eslint-plugin-storybook": "^0.11.3",
-  "prop-types": "^15.8.1",
-  "storybook": "^8.6.0",
-  "typescript": "^4.9.5",
-  "webpack": "^5.98.0"
-}
-
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.21.0",
+    "@babel/preset-typescript": "^7.21.0",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.6.0",
+    "@storybook/addon-interactions": "^8.6.0",
+    "@storybook/addon-onboarding": "^8.6.0",
+    "@storybook/blocks": "^8.6.0",
+    "@storybook/preset-create-react-app": "^8.6.0",
+    "@storybook/react": "^8.6.0",
+    "@storybook/react-webpack5": "^8.6.0",
+    "@storybook/test": "^8.6.0",
+    "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.20",
+    "eslint-plugin-storybook": "^0.11.3",
+    "postcss": "^8.5.3",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.6.0",
+    "tailwindcss": "^4.0.9",
+    "typescript": "^4.9.5",
+    "webpack": "^5.98.0"
+  }
 }
