export theme provider and themes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
   },
   "include": [
     "src/components",
-    "src/types"
+    "src/types",
+    "srch/themes"
   ],
   "exclude": ["node_modules", "src/stories/*"]
 }
