fix spelling mistake srch - src, prepare will also create theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
   "include": [
     "src/components",
     "src/types",
-    "srch/themes"
+    "src/themes"
   ],
   "exclude": ["node_modules", "src/stories/*"]
 }
