--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tasker-components",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/components/index.js",
-  "types": "dist/types/components/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -13,7 +13,7 @@
     "styled-components": "^6.1.15"
   },
   "scripts": {
-    "build": "tsc && npx babel src/components --out-dir dist/components --extensions '.ts,.tsx'",
+    "build": "tsc && npx babel src/index.ts --out-dir dist --extensions '.ts,.tsx'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "npm run build"
