--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,6 @@
     "target": "ES6",
     "module": "ES6",
     "jsx": "react",
-    "outDir": "./dist",
-    "declaration": true,
-    "declarationDir": "./dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -18,10 +15,7 @@
     }
   },
   "include": [
-    "src/components",
-    "src/types",
-    "src/themes",
-    "src/index.ts",
+   "src"
   ],
-  "exclude": ["node_modules", "src/stories/*"]
+  "exclude": ["node_modules"]
 }
