--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "styled-components": "^6.1.15"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.build.json && npx babel src/index.ts --out-dir dist --extensions '.ts,.tsx'",
+    "build": "tsc --project tsconfig.build.json && tsc-alias && npx babel src/index.ts --out-dir dist --extensions '.ts,.tsx'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "npm run build"
@@ -59,6 +59,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^8.6.0",
     "tailwindcss": "^4.0.9",
+    "tsc-alias": "^1.8.16",
     "typescript": "^4.9.5",
     "webpack": "^5.98.0"
   }
